Minor typo fixes
Summary:
Fixes minor typo issues.

To be cherry-picked to wmf/stable and relevant additional branches.

Reviewers: O1 phabricator.wikimedia.org, mmodell, #release-engineering-team, thcipriani

Reviewed By: #release-engineering-team, thcipriani

Subscribers: mmodell

Tags: #phabricator, #release-engineering-team

Differential Revision: https://phabricator.wikimedia.org/D1153

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This library formerly containd the wikimedia customizations to phabricator security policy behavior.
+This library formerly contained the Wikimedia customizations to Phabricator security policy behavior.
 
-This code has been moved to {rPHEX}
+This code has been moved to {rPHEX}.
